# sissa_ivy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MIGRATION.md  Makefile  NOTICE  README-aml.md  README.md  SECURITY.md  memory_cli.py  normalize_terminology.py  pr_body.md  pyproject.toml  sample.json  sample_probe.json  server.py  validate_probe_record.py
.github/: Next steps.md  PULL_REQUEST_TEMPLATE.md  Patch Patching Page + JSON Schema + Validator.md  S-4 Patch Recon.md  War Room Alignment.md  black_ops_psy_ops_refactor_patch_v_1.md  copilot-instructions.md  endpoint_telemetry_orchestration_architecture_v_1_0.md  labeler.yml  labels.yml  ordnance_agent_artifact_tagging_patch_v_1.md  psy_ops_war_room_react_vite_scaffold_patch_v_1.md  pull_request_template.md
archetypes/: auto_learn_correct.llm.v0.1.0.json  auto_learn_correct.llm.v0.1.1.json  auto_learn_correct_llm.py
cogsec/: .gitignore
cogsec_platform/: __init__.py  ingestion.sqlite  ingestion_service.py
dashboard/: requirements.txt  security_dashboard.py  start-dashboard.sh
docs/: DEVELOPER_QUICKSTART.md  ENHANCED-SECURITY-MONITORING.md  FRAMEWORK-REVIEW.md  README.md  SECURITY-DASHBOARD.md  SECURITY-POSTURE-ASSESSMENT.md  SESSION-SUMMARY-2025-09-15.md  SISSA_Mastermind_Seed.md  Suntari_Allegory_Closed_Loop_SOC.md  Suntari_Cast_and_Roles.md  architecture.md  pages-custom-domain.md
episodic_memory/: __init__.py  store.py
knowledge_base/: jao_kb5030219_blackops_psyops.md
mechanic/: actions.py
pitcrew/: service.py
platform/: ingestion_service.py
psyops/: agent.py
scripts/: README.md  (+12 more)
(+96 files in other folders)
