[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "episodic-memory"
version = "0.2.0"
description = "Minimal, dependency-free episodic memory store with JSON loader and retrieval"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Proprietary"}
authors = [{ name = "Your Company", email = "dev@example.com" }]
keywords = ["memory", "retrieval", "vector", "json"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
  "jsonschema>=4.18.0",
]

[project.scripts]
episodic-memory = "memory_cli:main"

[tool.setuptools.package-data]
episodic_memory = ["py.typed", "schemas/*.json"]

[tool.setuptools]
packages = ["episodic_memory"]

[project.optional-dependencies]
openai = ["openai>=1.6.0"]
local = ["sentence-transformers>=2.2.2"]
faiss = ["faiss-cpu>=1.7.4"]
api = ["fastapi>=0.111.0", "uvicorn>=0.23.0"]

[tool.ruff]
line-length = 120
target-version = "py39"
fix = false
show-fixes = false
# Only catch syntax/undefined-name level issues to keep CI green initially
select = ["E9", "F63", "F7", "F82"]
